--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ torch==1.11.0
 torchdiffeq==0.2.2
 chex==0.1.3
 torchvision==0.12.0
-flax==0.4.1
+flax==0.4.2
 tensorflow-probability==0.16.0
 tqdm==4.64.0
 wandb==0.12.16
 ml_collections==0.1.1
+ipykernel==6.13.0
+jupyter==1.0.0
