--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ torchdiffeq==0.2.2
 chex==0.1.3
 torchvision==0.12.0
 flax==0.4.2
-tensorflow-probability==0.16.0
+distrax==0.1.2
 tqdm==4.64.0
 wandb==0.12.16
 ml_collections==0.1.1
