--- a/requirements.txt
+++ b/requirements.txt
@@ -127,6 +127,7 @@ rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rsa==4.8
 scipy==1.8.0
+seaborn==0.12.2
 Send2Trash==1.8.0
 sentry-sdk==1.5.11
 setproctitle==1.2.3
