--- a/requirements.txt
+++ b/requirements.txt
@@ -1,171 +1,20 @@
-absl-py==1.0.0
-anyio==3.6.2
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asttokens==2.0.5
-astunparse==1.6.3
-attrs==21.4.0
-autopep8==2.0.0
-backcall==0.2.0
-beautifulsoup4==4.11.1
-black==23.1.0
-bleach==5.0.0
-cachetools==5.0.0
-certifi==2021.10.8
-cffi==1.15.0
-charset-normalizer==2.0.12
-chex==0.1.3
-click==8.1.3
-cloudpickle==2.0.0
-clu==0.0.6
-comm==0.1.2
-contextlib2==21.6.0
-cycler==0.11.0
-debugpy==1.6.0
-decorator==5.1.1
-defusedxml==0.7.1
-dill==0.3.4
-distrax==0.1.2
-dm-tree==0.1.7
-docker-pycreds==0.4.0
-entrypoints==0.4
-executing==0.8.3
-fastjsonschema==2.15.3
-flatbuffers==2.0
-flax==0.4.2
-fonttools==4.33.3
-gast==0.5.3
-gitdb==4.0.9
-GitPython==3.1.27
-google-auth==2.6.6
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-googleapis-common-protos==1.56.0
-grpcio==1.46.0
-h5py==3.6.0
-idna==3.3
-importlib-metadata==4.11.3
-iniconfig==1.1.1
-ipykernel==6.20.2
-ipython==8.3.0
-ipython-genutils==0.2.0
-ipywidgets==7.7.0
-jax==0.3.4
-# jaxlib==0.3.2+cuda11.cudnn805
-jedi==0.18.1
-Jinja2==3.1.2
-jsonschema==4.5.1
-jupyter==1.0.0
-jupyter-console==6.4.3
-jupyter-events==0.6.3
-jupyter_client==8.0.2
-jupyter_core==5.2.0
-jupyter_server==2.2.0
-jupyter_server_terminals==0.4.4
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==1.1.0
-keras==2.8.0
-Keras-Preprocessing==1.1.2
-kiwisolver==1.4.2
-libclang==14.0.1
-Markdown==3.3.7
-MarkupSafe==2.1.1
-matplotlib==3.5.2
-matplotlib-inline==0.1.3
-mistune==0.8.4
+jax==0.4.13
+flax==0.6.11
+optax==0.1.5
+distrax==0.1.3
+chex==0.1.7
+orbax-checkpoint==0.2.7
+tensorflow==2.12.0
+tensorflow-addons==0.20.0
+tensorflow-datasets==4.9.2
+tensorflow-probability==0.20.1
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch==2.0.1+cpu
+torchdiffeq==0.2.3
+absl-py==1.4.0
+clu==0.0.9
+tqdm==4.65.0
 ml-collections==0.1.1
-msgpack==1.0.3
-mypy-extensions==0.4.3
-nbclassic==0.5.1
-nbclient==0.6.2
-nbconvert==6.5.0
-nbformat==5.4.0
-nest-asyncio==1.5.5
-notebook==6.5.2
-notebook_shim==0.2.2
-numpy==1.22.3
-oauthlib==3.2.0
-opt-einsum==3.3.0
-optax==0.1.2
-packaging==23.0
-pandas==1.4.2
-pandocfilters==1.5.0
-parso==0.8.3
-pathspec==0.11.0
-pathtools==0.1.2
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.1.0
-platformdirs==2.6.2
-pluggy==1.0.0
-prometheus-client==0.14.1
-promise==2.3
-prompt-toolkit==3.0.29
-protobuf==3.20.1
-psutil==5.9.0
-ptyprocess==0.7.0
-pure-eval==0.2.2
-py==1.11.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycodestyle==2.10.0
-pycparser==2.21
-Pygments==2.12.0
-pyparsing==3.0.8
-pyrsistent==0.18.1
-pytest==7.1.2
-python-dateutil==2.8.2
-python-json-logger==2.0.4
-pytz==2022.1
-PyYAML==6.0
-pyzmq==25.0.0
-qtconsole==5.3.0
-QtPy==2.1.0
-requests==2.27.1
-requests-oauthlib==1.3.1
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rsa==4.8
-scipy==1.8.0
-seaborn==0.12.2
-Send2Trash==1.8.0
-sentry-sdk==1.5.11
-setproctitle==1.2.3
-shortuuid==1.0.9
-six==1.16.0
-smmap==5.0.0
-sniffio==1.3.0
-soupsieve==2.3.2.post1
-stack-data==0.2.0
-tensorboard==2.8.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.8.0
-tensorflow-addons==0.17.1
-tensorflow-datasets==4.5.2
-tensorflow-io-gcs-filesystem==0.25.0
-tensorflow-metadata==1.8.0
-tensorflow-probability==0.16.0
-termcolor==1.1.0
-terminado==0.13.3
-tf-estimator-nightly==2.8.0.dev2021122109
-tinycss2==1.1.1
-tomli==2.0.1
-toolz==0.11.2
-torch==1.11.0
-torchdiffeq==0.2.2
-torchvision==0.12.0
-tornado==6.2
-tqdm==4.64.0
-traitlets==5.9.0
-typeguard==2.13.3
-typing_extensions==4.2.0
-urllib3==1.26.9
-wandb==0.12.16
-wcwidth==0.2.5
-webencodings==0.5.1
-websocket-client==1.5.0
-Werkzeug==2.1.2
-widgetsnbextension==3.6.0
-wrapt==1.14.1
-zipp==3.8.0
+matplotlib==3.7.1
+ipykernel==6.24.0
+wandb==0.15.4
