--- a/requirements.txt
+++ b/requirements.txt
@@ -16,5 +16,7 @@ clu==0.0.9
 tqdm==4.65.0
 ml-collections==0.1.1
 matplotlib==3.7.1
+seaborn==0.12.2
+pandas==2.0.3
 ipykernel==6.24.0
 wandb==0.15.4
