--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "CommonLoopUtils"]
 	path = CommonLoopUtils
-	url = https://github.com/JamesAllingham/CommonLoopUtils.git
+	url = git@github.com:JamesAllingham/CommonLoopUtils.git
