--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,23 @@
-jax==0.4.13
-flax==0.6.11
-optax==0.1.5
-distrax==0.1.3
-chex==0.1.7
-orbax-checkpoint==0.2.7
-tensorflow==2.12.0
-tensorflow-addons==0.20.0
+jax==0.4.14
+flax==0.7.2
+optax==0.1.7
+distrax==0.1.4
+chex
+orbax-checkpoint==0.3.5
+ciclo
+tensorflow==2.13.0
+tensorflow-addons==0.21.0
 tensorflow-datasets==4.9.2
-tensorflow-probability==0.20.1
+tensorflow-probability==0.21.0
 --extra-index-url https://download.pytorch.org/whl/cpu
 torch==2.0.1+cpu
-torchdiffeq==0.2.3
-absl-py==1.4.0
+torchdiffeq
+absl-py
 -e ./CommonLoopUtils
-tqdm==4.65.0
-ml-collections==0.1.1
-matplotlib==3.7.1
-seaborn==0.12.2
-pandas==2.0.3
-ipykernel==6.24.0
-wandb==0.15.4
+tqdm
+ml-collections
+matplotlib
+seaborn
+pandas
+ipykernel
+wandb
