--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 jax==0.4.14
+numpy==1.24.3
 flax==0.7.2
 optax==0.1.7
 distrax==0.1.4
-chex
+chex==0.1.8
 orbax-checkpoint==0.3.5
 ciclo
 tensorflow==2.13.0
