--- a/experiments/inf_rand_hyper_sweep.yaml
+++ b/experiments/inf_rand_hyper_sweep.yaml
@@ -71,7 +71,7 @@ parameters:
     distribution: uniform
     max: 1.0
     min: 0
-  blur_sigma_init:
+  blur_σ_init:
     distribution: uniform
     max: 2.0
     min: 0
