--- a/experiments/inf_bayes_hyper_sweep.yaml
+++ b/experiments/inf_bayes_hyper_sweep.yaml
@@ -44,6 +44,10 @@ parameters:
     distribution: log_uniform_values
     max: 0.003
     min: 0.0001
+  σ_lr:
+    distribution: log_uniform_values
+    max: 0.03
+    min: 0.001
   model:
     parameters:
       use_layernorm:
@@ -51,17 +55,18 @@ parameters:
         values:
           - True
           - False
-      σ_init:
-        distribution: categorical
-        values:
-          - -2.252168
-          - -4.600165
   n_samples:
     distribution: categorical
     values:
       - 1
       - 3
       - 5
+  pred_σ_init:
+    distribution: categorical
+    values:
+      - 0.5413248  # 1.
+      - -2.252168  # 0.1
+      - -4.600165  # 0.01
   steps:
     distribution: categorical
     values:
