--- a/experiments/sweeps/vae_angles_hyper_sweep.yaml
+++ b/experiments/sweeps/vae_angles_hyper_sweep.yaml
@@ -59,5 +59,5 @@ parameters:
     distribution: uniform
     max: 20
     min: 1
-program: experiments/train_vae.py
+program: experiments/train/train_vae.py
 run_cap: 32
