--- a/experiments/sweeps/gen_grid_hyper_sweep.yaml
+++ b/experiments/sweeps/gen_grid_hyper_sweep.yaml
@@ -40,6 +40,7 @@ parameters:
           - 5
           - 6
       squash_to_bounds:
+        value: False
       transform:
         value: "AffineTransformWithoutShear"
       dropout_rate:
