--- a/experiments/sweeps/gen_grid_hyper_sweep_galaxy.yaml
+++ b/experiments/sweeps/gen_grid_hyper_sweep_galaxy.yaml
@@ -18,7 +18,7 @@ parameters:
     values:
       - 0.003
       - 0.0003
-  mae_loss_mult:
+  consistency_loss_mult:
     values:
      - 0.
      - 1.
